--- a/glide.yaml
+++ b/glide.yaml
@@ -85,4 +85,6 @@ import:
   subpackages:
   - exec
 - package: github.com/juju/mutex
+  version: d21b13acf4bfd8a8b0482a3a78e44d98880b40d3
 - package: github.com/juju/clock
+  version: bab88fc672997ef02d03f85310182d97a93dee21
