--- a/glide.yaml
+++ b/glide.yaml
@@ -18,6 +18,9 @@ import:
   version: 0af26ee230a5a16491bd8cf03b2b8070dd9c9a27
   subpackages:
   - daemon
+- package: github.com/projectcalico/cni-plugin
+  repo: git@github.com:tigera/cni-plugin-private.git
+  version: e27f9bffaff3a625d5c2c6bd9d9fbb6b3ee7c498
 - package: github.com/projectcalico/libcalico-go
   repo: git@github.com:tigera/libcalico-go-private.git
   version: 5e05209688ae1fb40a2916e40dc17f9c22e7b556
@@ -52,3 +55,67 @@ import:
   - kubernetes
   - tools/clientcmd
   - tools/clientcmd/api
+# Microsoft SDN libs.
+- package: github.com/Microsoft/SDN
+  version: 0d7593e5c8d4c2347079a7a6dbd9eb034ae19a44
+# CNI plugin dependencies
+# Need a recent master version to pick up API changes.
+- package: github.com/containernetworking/cni
+  version: e67bb289cccfcad352b92c5234a1610b105846e0
+  subpackages:
+  - pkg/skel
+  - pkg/types
+  - pkg/types/020
+  - pkg/types/current
+  - pkg/version
+# Need a recent master version to pick up API changes.
+- package: github.com/containernetworking/plugins
+  version: 646dbbace1b1000b2bcda2f9c66bda384555b57e
+  subpackages:
+  - pkg/ip
+  - pkg/ipam
+  - pkg/ns
+- package: github.com/mcuadros/go-version
+# A number of packages pull in x/sys but it's important that we get a recent one for the x/crypto package.
+# Most notably, containernetworking/plugins wants a version from ~2 years ago.
+# It should also be safe to take the latest here (it's generally just adding more symbols)
+- package: golang.org/x/sys
+  version: 1b2967e3c290b7c545b3db0deeda16e9be4f98a2
+# A number of packages depend on x/net.  The GRPC version used by the CNI support libraries
+# needs a more recent version than the default that gets selected.
+- package: golang.org/x/net
+  version: 4dfa2610cdf3b287375bbba5b8f2a14d3b01d8de
+- package: github.com/juju/errors
+  version: 22422dad46e14561a0854ad42497a75af9b61909
+- package: github.com/Microsoft/go-winio
+  version: 97e4973ce50b2ff5f09635a57e2b88a037aae829
+- package: github.com/Microsoft/hcsshim
+  version: 548046cb2f0495eb2acd7682a0035d465bf05ea9
+  subpackages:
+  - internal/guid
+  - internal/hcs
+  - internal/hcserror
+  - internal/hns
+  - internal/interop
+  - internal/longpath
+  - internal/mergemaps
+  - internal/safefile
+  - internal/schema1
+  - internal/timeout
+  - internal/wclayer
+- package: github.com/rakelkar/gonetsh
+  version: 758b1f7c9d1ca5acaca0b909f06ff9ed9fe35de1
+  subpackages:
+  - netsh
+- package: k8s.io/utils
+  version: cd34563cd63c2bd7c6fe88a73c4dcf34ed8a67cb
+  subpackages:
+  - exec
+- package: github.com/juju/mutex
+  version: d21b13acf4bfd8a8b0482a3a78e44d98880b40d3
+- package: github.com/juju/clock
+  version: bab88fc672997ef02d03f85310182d97a93dee21
+- package: github.com/buger/jsonparser
+  version: f4dd9f5a6b441265aefc1d44872a6f8c10f42b37
+- package: github.com/natefinch/atomic
+  version: a62ce929ffcc871a51e98c6eba7b20321e3ed62d
