--- a/_data/versions.yml
+++ b/_data/versions.yml
@@ -1,4 +1,85 @@
 v2.2:
+- title: v2.2.1
+  note: |
+    13 November 2018
+
+  dockerRepo: quay.io
+  components:
+    cnx-manager:
+      version: v2.2.1
+      url: ""
+    cnx-manager-proxy:
+      version: v2.2.1
+      url: ""
+    cnx-apiserver:
+      version: v2.2.1
+      url: ""
+    cnx-queryserver:
+      version: v2.2.1
+      url: ""
+    cnx-kube-controllers:
+      version: v2.2.1
+      url: ""
+    calicoq:
+      version: v2.2.1
+      url: ""
+    typha:
+      version: v2.2.1
+      url: ""
+    calicoctl:
+      version: v2.2.1
+      url: ""
+      download_url: ""
+    cnx-node:
+      version: v2.2.1
+      url: ""
+    calico/cni:
+      version: v3.2.4
+      url: ""
+      download_calico_url: https://github.com/projectcalico/cni-plugin/releases/download/v3.2.4/calico
+      download_calico_ipam_url: https://github.com/projectcalico/cni-plugin/releases/download/v3.2.4/calico-ipam
+    calico/routereflector:
+      version: v0.6.3
+      url: ""
+    calico:
+      version: v3.2.4
+      url: https://github.com/projectcalico/calico/releases/tag/v3.2.4
+    prometheus-operator:
+      version: v0.18.1
+      url: ""
+    prometheus:
+      version: v2.2.1
+      url: ""
+    alertmanager:
+      version: v0.14.0
+      url: ""
+    prometheus-config-reloader:
+      version: v0.0.3
+      url: ""
+    configmap-reload:
+      version: v0.0.1
+      url: ""
+    dikastes:
+      version: v2.2.1
+    flexvol:
+      version: v3.2.4
+    fluentd:
+      version: v2.2.1
+    es-proxy:
+      version: v2.2.1
+    elasticsearch-operator:
+      version: 0.2.0
+      url: ""
+    kibana:
+      version: 6.4.1
+      url: ""
+    elasticsearch:
+      version: 6.4.1
+      url: ""
+    tiny-tools:
+      version: 0.3.0
+      url: ""
+
 - title: v2.2.0
   note: |
     12 October 2018
