--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ imageNames:
   flexvol: quay.io/calico/pod2daemon-flexvol
   fluentd: tigera/fluentd
   es-proxy: tigera/es-proxy
+  cloudController: tigera/cloud-controller
 
 # List of files to exclude. These files won't get included in the deployed site.
 exclude:
