Added monitor agent configuration in fluentd (#18)
* Added moniter agent configuration in fluentd

* Updated Dockerfile: added a command to install 'curl'

* added sources 'forward' and 'http'

* Addressed review comments and added a shell script for readiness probe

* Modified the logic for readiness probe

* Updated readiness.sh

* Updated bind address for source monitor_agent

* Addressed review comments to remove the sleep from readiness shell script. Added inline comments for the script

* Addressed review comment: updated the index to tigera_secure_ee_flows

--- a/fluent.conf
+++ b/fluent.conf
@@ -1,4 +1,10 @@
 <source>
+  @type monitor_agent
+  bind 127.0.0.1
+  port 24220
+</source>
+
+<source>
   @type tail
   @id in_tail_flow_logs
   path "#{ENV['FLOW_LOG_FILE']}"
