Fix RBAC for calico-node
- Due to changes picked up with libcalico-go merge from OS master
  calico-node needs some additional RBAC permissions.
- In the interest of having working RBAC, these changes are going in
  until the proper docs merge from OS to here can be done.

--- a/master/getting-started/kubernetes/installation/hosted/rbac-kdd.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/rbac-kdd.yaml
@@ -83,6 +83,14 @@ rules:
       - list
       - update
       - watch
+  - apiGroups: [""]
+    resources:
+      - nodes/status
+    verbs:
+      # Needed for clearing NodeNetworkUnavailable flag.
+      - patch
+      # Calico stores some configuration information in node annotations.
+      - update
 
 ---
 
