--- a/master/getting-started/kubernetes/installation/rbac-etcd-typha.yaml
+++ b/master/getting-started/kubernetes/installation/rbac-etcd-typha.yaml
@@ -73,6 +73,12 @@ rules:
     verbs:
       - get
       - list
+  - apiGroups: [""]
+    resources:
+      - nodes/status
+    verbs:
+      # Needed for clearing NodeNetworkUnavailable flag.
+      - patch
 
 ---
 
