Added readiness and liveness probe for fluentd pod (#737)
* Added readiness and liveness probe for fluentd pod

* Corrected the indentation for yaml file

* Addressed review comments and removed the hard coded values of Elasticsearch host and port

* Update readiness probe with the shell script 'readiness.sh' as well as updated 'initialDelaySeconds' and 'periodSeconds' for both probes

* Reduced the frequency of readiness check

* Removed the curl command to ES

--- a/_includes/master/manifests/monitor-calico.yaml
+++ b/_includes/master/manifests/monitor-calico.yaml
@@ -461,6 +461,22 @@ spec:
             - name: elastic-ca-cert-volume
               mountPath: /etc/fluentd/elastic/ca.pem
 {%- endif %}
+          readinessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - /bin/readiness.sh
+            initialDelaySeconds: 60
+            periodSeconds: 60
+          livenessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - /usr/bin/fluentd -c /fluentd/etc/fluent.conf -p /fluentd/plugins --dry-run && curl -s http://localhost:24220/api/plugins.json
+            initialDelaySeconds: 60
+            periodSeconds: 60
       volumes:
         - name: var-log-calico
           hostPath:
