disable cloud controller health reporting by default

--- a/_includes/master/manifests/aws-cloud-controller.yaml
+++ b/_includes/master/manifests/aws-cloud-controller.yaml
@@ -135,6 +135,8 @@ spec:
 {%- endif %}
             - name: LICENSE_REFRESH_ENABLED
               value: "true"
+            - name: HEALTH_REPORTING_ENABLED
+              value: "false"
             - name: LOG_LEVEL
               value: "info"
             - name: VPCS
