Intrusion detection installer job
Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ imageNames:
   fluentd: tigera/fluentd
   es-proxy: tigera/es-proxy
   cloudController: tigera/cloud-controller
+  intrusion-detection-job-installer: tigera/intrusion-detection-job-installer
 
 # List of files to exclude. These files won't get included in the deployed site.
 exclude:
