--- a/_data/versions.yml
+++ b/_data/versions.yml
@@ -729,3 +729,5 @@ master:
       url: ""
     cnx-cloud-controller:
       version: master
+    intrusion-detection-job-installer:
+      version: master
