--- a/install/config.yaml
+++ b/install/config.yaml
@@ -1,3 +1,5 @@
 elasticsearch:
   - ["PUT", "_xpack/ml/anomaly_detectors/port_scan", "./data/port-scan-job.json"]
   - ["PUT", "_xpack/ml/datafeeds/datafeed-port_scan", "./data/port-scan-datafeed.json"]
+kibana:
+  - ["POST", "api/saved_objects/_bulk_create", "./data/api-kibana-dashboard.json"]
