--- a/_includes/master/manifests/calico-node.yaml
+++ b/_includes/master/manifests/calico-node.yaml
@@ -217,6 +217,20 @@ spec:
             - name: FELIX_POLICYSYNCPATHPREFIX
               value: "/var/run/nodeagent"
 {%- endif %}
+            # Sets Default Security Groups if tigera-aws-config exists
+            - name: TIGERA_DEFAULT_SECURITY_GROUPS
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-aws-config
+                  key: default_sgs
+                  optional: true
+            # Sets Pod Security Group if tigera-aws-config exists
+            - name: TIGERA_POD_SECURITY_GROUP
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-aws-config
+                  key: pod_sg
+                  optional: true
           securityContext:
             privileged: true
           resources:
