--- a/_includes/master/manifests/cnx.yaml
+++ b/_includes/master/manifests/cnx.yaml
@@ -407,12 +407,40 @@ spec:
               configMapKeyRef:
                 name: calico-config
                 key: etcd_cert
+          # Sets Default Security Groups if tigera-aws-config exists
+          - name: TIGERA_DEFAULT_SECURITY_GROUPS
+            valueFrom:
+              configMapKeyRef:
+                name: tigera-aws-config
+                key: default_sgs
+                optional: true
+          # Sets Pod Security Group if tigera-aws-config exists
+          - name: TIGERA_POD_SECURITY_GROUP
+            valueFrom:
+              configMapKeyRef:
+                name: tigera-aws-config
+                key: pod_sg
+                optional: true
         volumeMounts:
           - mountPath: /calico-secrets
             name: etcd-certs
 {%- elsif include.datastore == "kdd" %}
           - name: DATASTORE_TYPE
             value: "kubernetes"
+          # Sets Default Security Groups if tigera-aws-config exists
+          - name: TIGERA_DEFAULT_SECURITY_GROUPS
+            valueFrom:
+              configMapKeyRef:
+                name: tigera-aws-config
+                key: default_sgs
+                optional: true
+          # Sets Pod Security Group if tigera-aws-config exists
+          - name: TIGERA_POD_SECURITY_GROUP
+            valueFrom:
+              configMapKeyRef:
+                name: tigera-aws-config
+                key: pod_sg
+                optional: true
 {%- endif %}
         livenessProbe:
           httpGet:
