--- a/master/getting-started/kubernetes/installation/hosted/calicoq.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/calicoq.yaml
@@ -43,6 +43,20 @@ spec:
         configMapKeyRef:
           name: calico-config
           key: etcd_cert
+    # Sets Default Security Groups if tigera-aws-config exists
+    - name: TIGERA_DEFAULT_SECURITY_GROUPS
+      valueFrom:
+        configMapKeyRef:
+          name: tigera-aws-config
+          key: default_sgs
+          optional: true
+    # Sets Pod Security Group if tigera-aws-config exists
+    - name: TIGERA_POD_SECURITY_GROUP
+      valueFrom:
+        configMapKeyRef:
+          name: tigera-aws-config
+          key: pod_sg
+          optional: true
     volumeMounts:
     - mountPath: /calico-secrets
       name: etcd-certs
