--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calicoq.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calicoq.yaml
@@ -31,6 +31,20 @@ spec:
     env:
     - name: DATASTORE_TYPE
       value: kubernetes
+    # Sets Default Security Groups if tigera-aws-config exists
+    - name: TIGERA_DEFAULT_SECURITY_GROUPS
+      valueFrom:
+        configMapKeyRef:
+          name: tigera-aws-config
+          key: default_sgs
+          optional: true
+    # Sets Pod Security Group if tigera-aws-config exists
+    - name: TIGERA_POD_SECURITY_GROUP
+      valueFrom:
+        configMapKeyRef:
+          name: tigera-aws-config
+          key: pod_sg
+          optional: true
     volumeMounts:
     # Uncomment and edit these lines to enable a secrets volume for use with federated endpoint identity. Add
     # multiple entries to the volumeMounts if you are mounting in multiple secrets (e.g. one for each remote cluster)
