--- a/_includes/master/manifests/aws-cloud-controller.yaml
+++ b/_includes/master/manifests/aws-cloud-controller.yaml
@@ -91,7 +91,7 @@ spec:
           operator: Exists
       containers:
         - name: tigera-cloud-controllers
-          image: {{site.imageNames["cloudController"]}}:{{site.data.versions[page.version].first.components["cnx-cloud-controller"].version}}
+          image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["cloudControllers"]}}:{{site.data.versions[page.version].first.components["cloud-controllers"].version}}
           readinessProbe:
             exec:
               command:
