--- a/v2.2/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calicoctl.yaml
+++ b/v2.2/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calicoctl.yaml
@@ -20,6 +20,8 @@ metadata:
   name: calicoctl
   namespace: kube-system
 spec:
+  nodeSelector:
+    beta.kubernetes.io/os: linux
   hostNetwork: true
   imagePullSecrets:
   - name: cnx-pull-secret
