--- a/_data/v2_2/navbars/getting-started.yml
+++ b/_data/v2_2/navbars/getting-started.yml
@@ -30,6 +30,8 @@ toc:
       path: /getting-started/kubernetes/installation/integration
     - title: Using your own Elasticsearch for logs
       path: /getting-started/kubernetes/installation/byo-elasticsearch
+    - title: Installing Tigera Secure EE on EKS
+      path: /getting-started/kubernetes/installation/eks
   - title: Tutorials
     section:
     - title: Tigera Secure EE for Kubernetes Demo
