--- a/_includes/master/manifests/cloud-controllers.yaml
+++ b/_includes/master/manifests/cloud-controllers.yaml
@@ -89,6 +89,8 @@ spec:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
           operator: Exists
+      imagePullSecrets:
+        - name: cnx-pull-secret
       containers:
         - name: tigera-cloud-controllers
           image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["cloudControllers"]}}:{{site.data.versions[page.version].first.components["cloud-controllers"].version}}
