Change .pos files to be in /var/log/calico (#8) (#19)

--- a/fluent.conf
+++ b/fluent.conf
@@ -8,7 +8,7 @@
   @type tail
   @id in_tail_flow_logs
   path "#{ENV['FLOW_LOG_FILE']}"
-  pos_file "#{ENV['FLOW_LOG_FILE']}.pos"
+  pos_file "#{ENV['POS_DIR']}/flows.log.pos"
   tag flows
   read_from_head true
   <parse>
@@ -44,7 +44,7 @@
 <source>
   @type tail
   path /var/log/calico/audit/tsee-audit.log
-  pos_file /var/log/calico/audit/tsee-audit.log.pos
+  pos_file "#{ENV['POS_DIR']}/tsee-audit.log.pos"
   tag audit.tsee
   format json
   time_key time
