--- a/master/getting-started/kubernetes/installation/hosted/federation/calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/federation/calico.yaml
@@ -1,4 +1,4 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/calico.yaml datastore="etcd" network="calico" disable_ipip="true" calico_ipam="true" typha="true" federation="true" %}
+{% include {{page.version}}/manifests/calico.yaml datastore="etcd" network="calico" disable_ipip="true" calico_ipam="true" typha="true" federation="true" app_layer_policy="disabled" %}
