--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-ecs/1.7/calico-federation.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-ecs/1.7/calico-federation.yaml
@@ -1,4 +1,4 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/calico.yaml datastore="kdd" typha="true" network="ecs" federation="true" %}
+{% include {{page.version}}/manifests/calico.yaml datastore="kdd" typha="true" network="ecs" federation="true" app_layer_policy="disabled" %}
